--- a/GlobalConfig/application.properties
+++ b/GlobalConfig/application.properties
@@ -7,4 +7,4 @@ integration.api.path=api Modified
 integration.npv.api.host=trion-benefits.plansourcedev.com
 integration.npv.api.port=443
 integration.npv.api.path=v1/self_service
-integration.npv.api.relayState=https://benefits.plansource.com/sso/employee/saml2/post/38f86faba712e097
+integration.npv.api.relayState=Modified
